--- a/app/deployment.yaml
+++ b/app/deployment.yaml
@@ -6,11 +6,11 @@ metadata:
     app: app
 spec:
   replicas: 1
-    selector:
-      matchLabels:
-        app: app
+  selector:
+    matchLabels:
+      app: app
   template:
-    metadta:
+    metadata:
       labels:
         app: app
     spec:
