--- a/app/ingress.yaml
+++ b/app/ingress.yaml
@@ -6,11 +6,11 @@ spec:
   ingressClassName: traefik
   rules:
   - http:
-    paths:
-    - paths: /
-      pathType: Prefix
-      backend:
-        service:
-          name: app-service
-          port:
-            name: http
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: app-service
+            port:
+              name: http
