--- a/app/deployment.yaml
+++ b/app/deployment.yaml
@@ -32,3 +32,16 @@ spec:
     protocol: TCP
     port: 8888
     targetPort: 8888
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: app-ext-service
+spec:
+  selector:
+    app: app
+  ports:
+  - name: http
+    port: 8888
+    targetPort: 8888
+    nodePoort: 8888
